--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 buildscript {
     repositories {
-        google()
-        mavenCentral()
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven{ url 'https://maven.aliyun.com/repository/jcenter'}
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.1'
+        classpath 'com.android.tools.build:gradle:7.0.4'
     }
 }
 
@@ -17,7 +17,7 @@ allprojects {
         appVersionCode = 648
         appVersionName = '1.3.2'
 
-        appJavaCompatibility = JavaVersion.VERSION_1_8
+        appJavaCompatibility = JavaVersion.VERSION_11
 
         appAndroidCompileSDK = 31
         appAndroidMinSDK = 14
@@ -25,13 +25,13 @@ allprojects {
 
         gdxVersion = '1.11.0'
         gdxControllersVersion = '2.2.2'
-        robovmVersion = '2.3.16'
+        robovmVersion = '2.3.18'
     }
     version = appVersionName
 
     repositories {
-        google()
-        mavenCentral()
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven{ url 'https://maven.aliyun.com/repository/jcenter'}
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     }
 
